# routes/api.php
@@ -24,6 +24,7 @@ Route::group([
     'middleware' => ['api']
 ], function () {
     Route::apiResource('hotels', 'App\Http\Controllers\Api\V1\Admin\HotelsApiController');
+    Route::put('/hotels/{id}/book', ['App\Http\Controllers\Api\V1\Admin\HotelsApiController', 'bookHotel']);
     Route::get('/hotels/{searchKeyword}/search', ['App\Http\Controllers\Api\V1\Admin\HotelsApiController','getSearched']);
     Route::apiResource('locations', 'App\Http\Controllers\Api\V1\Admin\LocationsApiController');
     Route::get('/locations/{searchKeyword}/search', ['App\Http\Controllers\Api\V1\Admin\LocationsApiController','getSearched']);
