# storage/api-docs/api-docs.json
@@ -247,6 +247,51 @@
                 }
             }
         },
+        "/api/v1/hotels/{id}/book": {
+            "put": {
+                "tags": [
+                    "Hotels"
+                ],
+                "summary": "Book existing hotel",
+                "description": "Returns updated hotel data",
+                "operationId": "bookHotel",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Hotel id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Hotel"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
         "/api/v1/locations": {
             "get": {
                 "tags": [
